cluster-conf/apps/mozillians/dinopark-stage/mozillians.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mozillians-web
    keel.sh/trigger: poll
    keel.sh/policy: force
  name: mozillians-web
  namespace: mozillians-dinopark-stage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mozillians-web
      annotations:
        iam.amazonaws.com/role: "arn:aws:iam::320464205386:role/mozillians-dino"
    spec:
     containers:
     - image: 320464205386.dkr.ecr.us-west-2.amazonaws.com/dino-park-mozillians:9a45bf0ac7e602e8aea9188800a785fc58c9dbd5
       imagePullPolicy: Always
       volumeMounts:
       - name: secret-volume
         mountPath: /etc/secrets-volume
       name: mozillians-web
       ports:
       - containerPort: 8000
       command: ["/bin/sh"]
       args: ["-c", "cp /etc/secrets-volume/env /code/mozillians/.env && /code/bin/run-prod.sh"]
     volumes:
       - name: secret-volume
         secret:
           secretName: mozillians-dev
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mozillians-flower
    keel.sh/trigger: poll
    keel.sh/policy: force
  name: mozillians-flower
  namespace: mozillians-dinopark-stage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mozillians-flower
    spec:
      containers:
      - image: 320464205386.dkr.ecr.us-west-2.amazonaws.com/dino-park-mozillians:9a45bf0ac7e602e8aea9188800a785fc58c9dbd5
        imagePullPolicy: Always
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/secrets-volume
        name: mozillians-flower
        ports:
        - containerPort: 5555
        command: ["/bin/sh"]
        args: ["-c", "cp /etc/secrets-volume/env /code/mozillians/.env && /usr/local/bin/flower -A mozillians --address=0.0.0.0 --port=5555"]
      volumes:
        - name: secret-volume
          secret:
            secretName: mozillians-dev
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mozillians-celery
    keel.sh/trigger: poll
    keel.sh/policy: force
  name: mozillians-celery
  namespace: mozillians-dinopark-stage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mozillians-celery
    spec:
      containers:
      - image: 320464205386.dkr.ecr.us-west-2.amazonaws.com/dino-park-mozillians:9a45bf0ac7e602e8aea9188800a785fc58c9dbd5
        imagePullPolicy: Always
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/secrets-volume
        name: mozillians-celery
        command: ["/bin/sh"]
        args: ["-c", "cp /etc/secrets-volume/env /code/mozillians/.env && /bin/sh /code/bin/run-celery.sh"]
      volumes:
        - name: secret-volume
          secret:
            secretName: mozillians-dev
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mozillians-celery-beat
    keel.sh/trigger: poll
    keel.sh/policy: force
  name: mozillians-celery-beat
  namespace: mozillians-dinopark-stage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: mozillians-celery-beat
    spec:
      containers:
      - image: 320464205386.dkr.ecr.us-west-2.amazonaws.com/dino-park-mozillians:9a45bf0ac7e602e8aea9188800a785fc58c9dbd5
        imagePullPolicy: Always
        volumeMounts:
          - name: secret-volume
            mountPath: /etc/secrets-volume
        name: mozillians-celery
        command: ["/bin/sh"]
        args: ["-c", "cp /etc/secrets-volume/env /code/mozillians/.env && /bin/sh /code/bin/run-celery-beat.sh"]
      volumes:
        - name: secret-volume
          secret:
            secretName: mozillians-dev
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    name: mozillians-web
  name: mozillians-web
  namespace: mozillians-dinopark-stage
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    name: mozillians-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    name: mozillians-flower
  name: mozillians-flower
  namespace: mozillians-dinopark-stage
spec:
  ports:
  - protocol: TCP
    port: 5555
    targetPort: 5555
  selector:
    name: mozillians-flower
