cluster-conf/apps/mozillians/dinopark-stage/oidc-proxy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: oidc-proxy
    keel.sh/trigger: poll
    keel.sh/policy: force
  name: oidc-proxy
  namespace: mozillians-dinopark-stage
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: oidc-proxy
    spec:
      containers:
        - image: mozillaparsys/mozilla.oidc.proxy:latest
          imagePullPolicy: Always
          name: oidc-porxy
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    name: oidc-proxy
  name: oidc-proxy
  namespace: mozillians-dinopark-stage
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    name: oidc-proxy
